@@ -23,42 +23,3 @@
 
 
 namespace OCA\FeedCentral;
-
-use \OCA\AppFramework\Core\API;
-
-
-// dont break owncloud when the appframework is not enabled
-if(\OCP\App::isEnabled('appframework') && \OCP\App::isEnabled('news')){
-
-	$api = new API('feedcentral');
-
-	// uncomment the next line to activate the admin interface
-	//$api->registerAdmin('admin/settings');
-
-	// uncomment this when you decide to add a configurable ui
-	/*$api->addNavigationEntry(array(
-
-		// the string under which your app will be referenced in owncloud
-		'id' => $api->getAppName('feedcentral'),
-
-		// sorting weight for the navigation. The higher the number, the higher
-		// will it be listed in the navigation
-		'order' => 10,
-
-		// the route that will be shown on startup
-		'href' => $api->linkToRoute('feedcentral_index'),
-
-		// the icon that will be shown in the navigation
-		// this file needs to exist in img/example.png
-		'icon' => $api->imagePath('icon.svg'),
-
-		// the title of your application. This will be used in the
-		// navigation or on the settings page of your app
-		'name' => $api->getTrans()->t('Feed Central')
-
-	));*/
-
-} else {
-	$msg = 'Can not enable the app because the App Framework app or the News app is disabled';
-	\OCP\Util::writeLog('feedcentral', $msg, \OCP\Util::ERROR);
-}
