@@ -1,2 +1,5 @@
+ownCloud-feedcentral (0.032)
+* Make compatible with ownCloud 7.0
+
 ownCloud-feedcentral (0.001)
 * Created app
